--- a/AlphaS/AlphaS/MainWindow.xaml
+++ b/AlphaS/AlphaS/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AlphaS"
         mc:Ignorable="d"
-        Title="Navigator" Height="350" Width="174.118">
+        Title="Navigator" Height="350" Width="174.118" Loaded="Window_Loaded" Unloaded="Window_Unload" ResizeMode="NoResize">
     <Grid>
-        
+        <StackPanel VerticalAlignment="Center">
+            <Button Height="20" Click="toggleStockList">toggle stock list window</Button>
+        </StackPanel>
     </Grid>
 </Window>
