--- a/AlphaS/AlphaS/Forms/BasicDailyDataWindow.xaml
+++ b/AlphaS/AlphaS/Forms/BasicDailyDataWindow.xaml
@@ -22,7 +22,7 @@
             <WebBrowser x:Name="webBrowser" Height="200">
                 
             </WebBrowser>
-            <TextBlock>Acquire Information</TextBlock>
+            <TextBlock x:Name="acquiredText">Acquire Information</TextBlock>
             
         </StackPanel>
         
