--- a/AlphaS/AlphaS/Forms/BasicDailyDataWindow.xaml
+++ b/AlphaS/AlphaS/Forms/BasicDailyDataWindow.xaml
@@ -8,22 +8,20 @@
         Title="BasicDailyDataWindow" Height="800" Width="1000" ResizeMode="NoResize" Closing="Window_Closing" Loaded="Window_Loaded">
     <Grid>
         <StackPanel>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <TextBlock>Start Year</TextBlock>
+                <TextBox Width="50" Text="{Binding startYear}"/>
+                <TextBlock>Start Month</TextBlock>
+                <TextBox Width="50" Text="{Binding startMonth}"/>
+            </StackPanel>
             <DockPanel>
-                <TextBlock Width="80">Stock</TextBlock>
-                <TextBox>Stock ID  name</TextBox>
+                <Button Click="Button_Navigate_Click">Start Mission</Button>
             </DockPanel>
-            <DockPanel>
-                <Button>Analyze Data Bank</Button>
-                <TextBox></TextBox>
-            </DockPanel>
-            <DockPanel>
-                <Button Click="Button_Navigate_Click">navigate</Button>
-            </DockPanel>
-            <Grid x:Name="webBrowserGrid" Height="500">
+            <Grid x:Name="webBrowserGrid" Height="200">
                 
             </Grid>
             <TextBox x:Name="acquiredText" Text="{Binding acquiredData}" 
-                     VerticalScrollBarVisibility="Visible" Height="150"/>
+                     VerticalScrollBarVisibility="Visible" Height="450"/>
             
         </StackPanel>
         
