--- a/AlphaS/AlphaS/Forms/BasicDailyDataWindow.xaml
+++ b/AlphaS/AlphaS/Forms/BasicDailyDataWindow.xaml
@@ -5,9 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AlphaS.Forms"
         mc:Ignorable="d"
-        Title="BasicDailyDataWindow" Height="800" Width="1000" ResizeMode="NoResize" Closing="Window_Closing" Loaded="Window_Loaded">
+        Title="BasicDailyDataWindow" Height="800" Width="1400" ResizeMode="NoResize" Closing="Window_Closing" Loaded="Window_Loaded">
     <Grid>
-        <StackPanel>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="800"/>
+            <ColumnDefinition Width="600"/>
+        </Grid.ColumnDefinitions>
+        <Grid x:Name="webBrowserGrid" Height="800" Grid.Column="0"/>
+
+        <StackPanel Grid.Column="1">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <TextBlock>Start Year</TextBlock>
                 <TextBox Width="50" Text="{Binding startYear}"/>
@@ -18,13 +24,10 @@
             <DockPanel>
                 <Button Click="Button_Navigate_Click">Start Mission</Button>
             </DockPanel>
-            <Grid x:Name="webBrowserGrid" Height="200">
-                
-            </Grid>
             <TextBox x:Name="acquiredText" Text="{Binding acquiredData}" 
-                     VerticalScrollBarVisibility="Visible" Height="450"/>
-            
+                      Height="350"/>
+            <TextBox x:Name="missionList" Text="{Binding missionList}"  Height="350"/>
         </StackPanel>
-        
+
     </Grid>
 </Window>
