--- a/AlphaS/AlphaS/MainWindow.xaml
+++ b/AlphaS/AlphaS/MainWindow.xaml
@@ -10,6 +10,7 @@
         <StackPanel VerticalAlignment="Center">
             <Button Height="20" Click="toggleStockList">toggle stock list window</Button>
             <Button Height="20" Click="toggleBasicDailyData">toggle Basic Daily Data window</Button>
+            <Button Height="20" Click="toggleDataAnalyzer">toggle Data Analyzer window</Button>
         </StackPanel>
     </Grid>
 </Window>
