--- a/AlphaS/AlphaS/Forms/DataAnalyzerWindow.xaml
+++ b/AlphaS/AlphaS/Forms/DataAnalyzerWindow.xaml
@@ -15,7 +15,8 @@
         <StackPanel Grid.Column="0">
             <TextBlock FontSize="15" Margin="0,20">Function</TextBlock>
             <Button Click="UpdateDiv">UpdateDiv</Button>
+            <Button Click="CalculateParameter">Parameter</Button>
         </StackPanel>
-        <TextBlock Grid.Column="1" Text="{Binding display}"/>
+        <TextBlock Grid.Column="1" Text="{Binding display}" Padding="20,0,0,0"/>
     </Grid>
 </Window>
