--- a/AlphaS/AlphaS/Forms/DataAnalyzerWindow.xaml
+++ b/AlphaS/AlphaS/Forms/DataAnalyzerWindow.xaml
@@ -28,6 +28,6 @@
             <Label>Evaluation Functions</Label>
             <Button Click="ScoreFuturePriceEvaluationTable">ScoreFuturePriceEvaluationTable</Button>
         </StackPanel>
-        <TextBlock Grid.Column="1" Text="{Binding display}" Padding="20,0,0,0"/>
+        <TextBlock x:Name="displayText" Grid.Column="1" Text="{Binding display, IsAsync=True}" Padding="20,0,0,0"/>
     </Grid>
 </Window>
