--- a/AlphaS/AlphaS/Forms/DataAnalyzerWindow.xaml
+++ b/AlphaS/AlphaS/Forms/DataAnalyzerWindow.xaml
@@ -29,6 +29,10 @@
             <Button Click="CalculateParameterFuturePriceTable">CalculateParameterFuturePriceTable</Button>
             <Label>Evaluation Functions</Label>
             <Button Click="ScoreFuturePriceEvaluationTable">ScoreFuturePriceEvaluationTable</Button>
+            <TextBlock FontSize="15" Margin="0,20">模擬</TextBlock>
+            <Button Click="TradeSimulation">Trade Sim</Button>
+            <TextBlock FontSize="15" Margin="0,20">組套</TextBlock>
+            <Button Click="GroupOrder">AnalyzeData+Parameter+FP+FinalTable</Button>
         </StackPanel>
         <TextBlock x:Name="displayText" Grid.Column="1" Text="{Binding display, IsAsync=True}" Padding="20,0,0,0"/>
     </Grid>
